# mathlib

./: .gitignore  README.md
gridop/gridop1/: gridop1.cpp  makefile  pch.h
gridop/gridop1_cuda/: gridop1.cu  out  pch.h
gridop/gridop1_dim/: gridop1_dim.cpp  makefile  pch.h
gridop/gridop1_dim_cuda/: gridop1_dim.cu  pch.h
gridop/gridop1_src/: average_operator.hpp  catch.h  cyclic.hpp  first_derivative_operator.hpp  first_derivative_operator_dim.hpp  gridop1_cpp.h  gridop1_dim_cpp.h  gridop1_dim_include.h  gridop1_include.h  initializer.hpp  periodic_index.hpp  symmetric_index.hpp
gridop/gridop2/: gridop2.cpp  makefile  pch.h
gridop/gridop2_cuda/: gridop2.cu  makefile  pch.h
gridop/gridop2_dim/: gridop2_dim.cpp  makefile  pch.h
gridop/gridop2_dim_cuda/: gridop2_dim.cu  pch.h
gridop/gridop2_src/: average_operator.hpp  cyclic.hpp  first_derivative_operator.hpp  first_derivative_operator_dim.hpp  first_derivative_operator_dim2.hpp  gridop2_cpp.h  gridop2_dim2_cpp.h  gridop2_dim2_include.h  gridop2_dim_cpp.h  gridop2_dim_include.h  gridop2_include.h  initializer.hpp  periodic_index.hpp
gridop/gridop2_vtk/: CMakeLists.txt  pch.h
gridop/gridop2_vtk/src/: gridop2.cpp
hpc/: boost_mpi.h  boost_mpi_io.h  cuda_utils.h  hpc_utils.h  mpi.hpp  mpi_io.hpp  opencl_utils.h  process_grid.h
hpc/save/: async_executor.hpp  async_executor_.hpp  async_task.hpp  cuda_async_task_queue.h  cuda_task.h  mpi_async_task_queue.h  mpi_task.h  multi_cuda_host_mpi_task.h  multi_cuda_task.h  multi_opencl_task.h  multi_thread_task.h  multicore_task.h  opencl_task.h  shmem_task.h  (+5 more)
(+289 files in other folders)
